syntax = "proto3";
option go_package = "api/proto/command";
import "api/proto/google/annotations.proto";

service DatabaseController {
    rpc SelectDatabase (SelectDatabaseRequest) returns (SelectDatabaseResponse);
    rpc Get (GetRequest) returns (GetResponse){
        option (google.api.http) = {
            get: "/api/get/{database_name}/{key}"
        };};
    rpc Set (SetRequest) returns (SetResponse);
    rpc GetKeys (GetKeysRequest) returns (GetKeysResponse){
        option (google.api.http) = {
            get: "/api/keys/{database_name}/{key_pattern}"
        };};
}

message SelectDatabaseRequest{
    string name = 1;
}

message SelectDatabaseResponse{
    string name = 1;
}

message GetRequest{
    string database_name = 1;
    string key = 2;
}

message GetResponse{
    string key = 2;
    bytes value = 3;
}

message SetRequest{
    string database_name = 1;
    string key = 2;
    bytes value = 3;
}

message SetResponse{
    string status = 1;
}

message GetKeysRequest{
    string database_name = 1;
    string key_pattern = 2;
}

message GetKeysResponse{
    repeated string keys = 1;
}